--- a/template.html
+++ b/template.html
@@ -14,13 +14,13 @@
 
     <!-- required fields -->
     <input type="hidden" name="policy" value="%{policy}" />
-    <input type="hidden" name="x-amz-signature" value="%{signature}" />
+    <input type="hidden" name="x-amz-signature" value="%{x-amz-signature}" />
 
-    <input type="hidden" name="x-amz-credential" value="%{accessKeyId}/%{date}/%{region}/%{service}/aws4_request" />
-    <input type="hidden" name="x-amz-algorithm" value="AWS4-HMAC-SHA256" />
-    <input type="hidden" name="x-amz-date" value="%{date}T000000Z" />
+    <input type="hidden" name="x-amz-credential" value="%{x-amz-credential}" />
+    <input type="hidden" name="x-amz-algorithm" value="%{x-amz-algorithm}" />
+    <input type="hidden" name="x-amz-date" value="%{x-amz-date}" />
     <input type="hidden" name="key" value="%{keyPrefix}${filename}" /><br />
-    <input type="hidden" name="acl" value="public-read" />
+    <input type="hidden" name="acl" value="%{acl}" />
     <input type="file" name="file" /> <br />
     <button type="submit">Upload to Amazon S3</button>
   </form>
